# sketches

./: .gitignore  README.md  cargo.toml
cache/: Cargo.toml
cache/src/: cache.rs  lib.rs  serialization.rs
cache/src/data/: mod.rs
cache_analyzer/: package.json  pnpm-lock.yaml
cache_analyzer/src/: app.css
cache_analyzer/src/lib/: OddEvenList.svelte  data.ts
cache_analyzer/src/routes/: +layout.svelte  +layout.ts  +page.ts
cache_analyzer/src/routes/[ch]/: +layout.svelte  +layout.ts  +page.ts
cache_analyzer/src/routes/[ch]/[op]/: +page.svelte  +page.ts
cache_analyzer_server/: Cargo.toml
cache_analyzer_server/src/: main.rs  model.rs  state.rs
per_set/: Cargo.toml
per_set/proptest-regressions/: tests.txt
per_set/src/: iter.rs  lib.rs  nodes.rs  set.rs  set_wrapper.rs  structure.rs  tests.rs
playground/: Cargo.toml
playground/src/: main.rs
queries/: Cargo.toml
queries/proptest-regressions/: tests.txt
queries/src/: cache.rs  execution.rs  fingerprinting.rs  lib.rs  serialization.rs  tests.rs  trace.rs
queries/src/data/: instances.rs  mod.rs
queries_check/: Cargo.toml
queries_check/src/: lib.rs  query.rs  test.rs
sparse_vec/: Cargo.toml
sparse_vec/proptest-regressions/: tests.txt
sparse_vec/src/: lib.rs  tests.rs
test_utils/: Cargo.toml
test_utils/src/: lib.rs
tmp/: trace.json
tracer/: Cargo.toml
tracer/src/: cache.rs  full.rs  lib.rs  output.rs
tracer_types/: cargo.toml
tracer_types/src/: lib.rs
tripper/: Cargo.toml
tripper/src/: lib.rs
