[package]
name = "per_set"
version = "0.1.0"
edition = "2021"

[dependencies]
sparse_vec = { path = "../sparse_vec" }
smallvec = { version = "1", features = ["union", "const_generics"] }
rustc-hash = "2"

[dev-dependencies]
proptest = "1"
test_utils = { path = "../test_utils" }

[lints]
workspace = true
