[package]
name = "queries_check"
version = "0.1.0"
edition = "2024"

[dependencies]
queries = { path = "../queries" }
divisors_fixed = "0.4.0"
anyhow = "1.0.94"
futures = "0.3"
async-std = "1"
async-global-executor = "3"
rand = "0.9"
itertools = "0.14"
rustc-hash = "2"

[dev-dependencies]
ntest = "0.9"

[lints]
workspace = true
