[package]
name = "tracer"
version = "0.1.0"
edition = "2024"

[dependencies]
tracer_types = { path = "../tracer_types" }
futures = "0.3"
cache = { path = "../cache" }
anyhow = "1"
serde_json = "1"
dashmap = {version = "6", features = ["inline"]}
rustc-hash = "2"
per_set = { path = "../per_set/" }

[lints]
workspace = true
